Оконные функции + Виггерс управление проектом

--- a/Сеть/Протоколы и что с ними частично связано  №2.md
+++ b/Сеть/Протоколы и что с ними частично связано  №2.md
@@ -1,6 +1,7 @@
 [[Протоколы и все, что с ними связано]]
 # Службы каталогов Microsoft
 ## Active Directory
+[статья](https://habr.com/ru/articles/958404/)
 **Microsoft Active Directory (AD)** — это **служба каталогов** (directory service, база данных в которых хранятся учетки пользователей), разработанная Microsoft для управления пользователями, компьютерами, группами и другими ресурсами в сети на базе **Windows Server**.
 Kerberos - протокол проверяющий аутентификацию пользователей в AD.
 KeyCloak - сервис авторизации. Промежуточное звено между клиентским приложением и сервером ресурсов. Через него пользователь без прямого участия при помощи протокола OAuth2.0 может верифицировать доступ к необходимым ресурсам. Также позволяет логиниться пользователям в режиме SSO на различных сервисах. В контексте Кербероса и Кейклока: Кейклок - позволяет входить в подъезд, Керберос в квартиру. 
