--- a/Системный и бизнес анализ/Виггерс/Управление требованиями/Виггерс 27. Приемы управления требованиями к ПО.md
+++ b/Системный и бизнес анализ/Виггерс/Управление требованиями/Виггерс 27. Приемы управления требованиями к ПО.md
@@ -11,10 +11,9 @@
 - снижение качества, чтобы поставить продукт к оговоренному сроку;
 # Почему нужно управлять требованиями
 Позволяет:
-- убедиться, что усилия потраченные на разработку требований потрачены не впустую;
 - эффективное управление требованиями может уменьшить неверные ожидания;
 - заинтересованные лица будут проинформированы о текущем состоянии требований в ходе процесса разработки;
-- понимание для всех, куда движется проект, как идут дела, когда проект прибудет в конечную точку;
+- понимание для всех какое количество требований реализовано, куда движется проект, как идут дела, когда проект прибудет в конечную точку;
 ## Управление версиями требований
 Каждая версия требований должна уникальным образом идентифицироваться, чтобы минимизировать путаницу и непонимание среди сотрудников:
 - версия 1.0, черновик 1;
