--- a/Системный и бизнес анализ/Виггерс/Управление требованиями/Виггерс 28. Изменения случаются.md
+++ b/Системный и бизнес анализ/Виггерс/Управление требованиями/Виггерс 28. Изменения случаются.md
@@ -1,11 +1,30 @@
 [[Карта гипотез]]
 [[Дизайн и поведение 6. Определение проблемы]]
 [[Виггерс 27. Приемы управления требованиями к ПО]]
-# Введение
+[[Виггерс 29. Связи в цепи требований]]
+# Мое Введение
+[[Карта гипотез]]
+[[Дизайн и поведение 6. Определение проблемы]]
+
+У нас есть:
+- целевой результат - какая-то цель, которую мы должны достичь. Что необходимо получить в результате проекта/чего должен достичь продукт и т.д. Эта цель бывает как хорошо, так и плохо детерминирована.
+
+На основании этой цели (хорошо/плохо детерминированной) и имеющимся контекстом мы определяем балансировочные **МЕТРИКИ** чтобы сделать её еще более детерминированной и строим **ГИПОТЕЗУ**/**ПРЕДПОЛОЖЕНИЕ** о том, что нам необходимо сделать чтобы прийти к целевому результату. 
+Мы определяем:
+- действующее лицо - на чье поведение мы должны повлиять/кто будет делать
+- целевое действие - минимальный набор действий которые необходимо сделать, чтобы достичь результата
+
+И уже после того, как мы на основании решения задачи, то как мы её понимаем, строим наши гипотеза, мы собираем и создаем **требования**, которые описывают, ЧТО необходимо сделать, ЧТОБЫ прийти к целевому результату.
+
+Мы зафиксировали результат, что нам необходимо сделать, чтобы к нему прийти. И дальше по целому стечению обстоятельств (цель плохо детерминирована, в мире изменились правила, появились новые гипотезы) происходят **ИЗМЕНЕНИЯ**. 
+Изменения относятся к:
+- уже существующему скоупу работ;
+- к новым требованиям;
+И нам с этим работать.
+# Введение Виггерса
 Определить все требования к продукту практически невозможно, а по ходу проекта изменяются обстоятельства:
-- возникают новые бизнес-возможности;
-- меняются бизнес-правила;
-- возникают бизнес-потребности;
+- бизнес-правила;
+- возникают новые бизнес-возможности/потребности;
 
 При изменении требования необходимо:
 - предложенные изменения требований тщательно оценены до их ввода в дело;
@@ -22,7 +41,7 @@
 Рост объема требований постоянно включает новую функциональность без учета:
 - ресурсов;
 - графика;
-- целей качества;
+- качества;
 
 Проблема не в изменениях, а в том какое влияние они оказывают на уже сделанную работу.
 Для управления незапланированным ростом объема необходимо:
