Added some about solving problems

--- a/Системный и бизнес анализ/Виггерс/Разработка требований/Виггерс 14. Атрибуты качества ПО.md
+++ b/Системный и бизнес анализ/Виггерс/Разработка требований/Виггерс 14. Атрибуты качества ПО.md
@@ -70,7 +70,7 @@
 Виггерс предлагает свою пятимерную модель.
 ![[Pasted image 20250503144034.png]]
 Лучше меньше функций, но качественных, чем большое количество функций, но все работающие криво.
-Последовательное обеспечение качество является довольно сложной задачей. Пытаясь уложиться по срокам за счет экономии времени разработчики будут накапливать технический долг, что в дальнейшем приводит к усложнению его исправления.
+Последовательное обеспечение качества является довольно сложной задачей. Пытаясь уложиться по срокам за счет экономии времени разработчики будут накапливать технический долг, что в дальнейшем приводит к усложнению его исправления.
 
 ## ПЕРВЫЕ ШАГИ: КАЧЕСТВО
 Прежде чем вы перейдете к изучению уроков, связанных с качеством, предлагаю вам потратить несколько минут на следующие действия. По мере чтения подумайте, в какой степени каждый из этих пунктов применим к вашей организации или команде.
