--- a/Системный и бизнес анализ/Виггерс/Управление требованиями/Виггерс 32. Требования к ПО и управление рисками.md
+++ b/Системный и бизнес анализ/Виггерс/Управление требованиями/Виггерс 32. Требования к ПО и управление рисками.md
@@ -20,11 +20,11 @@
 - переход на новую технологию;
 # Составляющие управления рисками
 ![[Pasted image 20251106053013.png]]
-Управление рисками - применение процедур и средств ограничения рисков в проекте с приемлемыми рамками.
-Оценка риска - процесс исследования проекта для выявления возможных опасностей. Облегчите задачу выявления рисков, составляя списки рисков типичные для разработки ПО.
-При анализе риска мы исследуем возможные последствия конкретных рисков.
-Предотвращение риска - один из способов работы с риском. Не делать то, что рискованно. 
-Контроль - большую часть времени необходимо контролировать высокоприоритетные риски. Цель действий - не позволить риску стать проблемой, либо уменьшить вредной воздействие.
+**Управление рисками** - применение процедур и средств ограничения рисков в проекте с приемлемыми рамками:
+	**Оценка риска** - процесс исследования проекта для выявления возможных опасностей. Облегчите задачу выявления рисков, составляя списки рисков типичные для разработки ПО.
+		При **анализе риска** мы исследуем возможные последствия конкретных рисков.
+	**Предотвращение риска** - один из способов работы с риском. Не делать то, что рискованно. 
+	**Контроль** - большую часть времени необходимо контролировать высокоприоритетные риски. Цель действий - не позволить риску стать проблемой, либо уменьшить вредной воздействие.
 
 # Документирование рисков проекта
 Недостаточно знать о рисках - нужно управлять ими так, чтобы иметь возможность сообщать о проблемах и состоянии рисков заинтересованным лицам на протяжении проекта.
